[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
description = "An API client for JFrog Artifactory."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "artifactory-web-api"
readme = "README.md"
repository = "https://github.com/mvertescher/artifactory-web-api-rs"
version = "0.0.2-alpha.0"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
log = "0.4"
serde = "1"
serde_derive = "1"
thiserror = "1"
hex = { version = "0.4.3", features = ["serde"] }
url = { version = "2", features = ["serde"] }

[dependencies.reqwest]
default-features = false
features = ["json"]
version = "0.11"

[features]
default = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
